--- a/authencation-service/src/main/resources/application.yaml
+++ b/authencation-service/src/main/resources/application.yaml
@@ -1,10 +1,10 @@
 server:
   port: 8081
-  ssl:
-    key-store: classpath:cert.p12
-    key-store-password: Mkx6d1@667
-    key-store-type: PKCS12
-    key-alias: mykey
+#  ssl:
+#    key-store: classpath:cert.p12
+#    key-store-password: Mkx6d1@667
+#    key-store-type: PKCS12
+#    key-alias: mykey
 spring:
   datasource:
     url: jdbc:postgresql://localhost:5432/dictionary
