correct package name

--- a/history-and-favorite/pom.xml
+++ b/history-and-favorite/pom.xml
@@ -46,7 +46,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
-                    <mainClass>com.dictionary.historyandfavorite.HistoryandfavoriteApplication</mainClass>
+                    <mainClass>com.dictionary.history.HistoryApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
