--- a/authentication/pom.xml
+++ b/authentication/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.dictionary</groupId>
 	<artifactId>authentication</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>authentication-service</name>
+	<name>authentication</name>
 	<description>Project dictionary</description>
 	<properties>
 		<java.version>17</java.version>
