adjust format, add AboutProject component

--- a/frontend-reactjs/public/manifest.json
+++ b/frontend-reactjs/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Gachi Korean",
-  "name": "Gachi Korean - Học tiếng Hàn cùng Meow",
+  "short_name": "Viet Dictionary",
+  "name": "Viet Dictionary - Học tiếng Anh cùng Meow",
   "icons": [
     {
       "src": "favicon.ico",
